k8s/prod/kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: kong
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kong
  template:
    metadata:
      labels:
        network/app-network: "true"
        service: kong
    spec:
      containers:
      - env:
        - name: KONG_LOG_LEVEL
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_LOG_LEVEL
        - name: KONG_DECLARATIVE_CONFIG
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_DECLARATIVE_CONFIG
        - name: KONG_DATABASE
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_DATABASE
        - name: KONG_PROXY_ACCESS_LOG
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_PROXY_ACCESS_LOG
        - name: KONG_ADMIN_ACCESS_LOG
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_ADMIN_ACCESS_LOG
        - name: KONG_PROXY_ERROR_LOG
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_PROXY_ERROR_LOG
        - name: KONG_ADMIN_ERROR_LOG
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_ADMIN_ERROR_LOG
        - name: KONG_ADMIN_LISTEN
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_ADMIN_LISTEN
        - name: KONG_PLUGINS
          valueFrom:
            configMapKeyRef:
              name: musicians-config
              key: KONG_PLUGINS
        image: feelwork/musicians-kong:1.0.0
        name: kong-container
        ports:
        - containerPort: 8000
        - containerPort: 8443
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

      restartPolicy: Always
