k8s/prod/user-stats-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: user-stats-consumer
  name: user-stats-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      service: user-stats-consumer
  template:
    metadata:
      labels:
        network/app-network: "true"
        service: user-stats-consumer
    spec:
      containers:
      - args:
        - python
        - manage.py
        - consume_user_stats
        image: feelwork/musicians-users-service:1.0.5
        name: user-stats-consumer
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

      restartPolicy: Always
