k8s/prod/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: users-service
  name: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      service: users-service
  template:
    metadata:
      labels:
        network/app-network: "true"
        service: users-service
    spec:
      containers:
      - args:
        - gunicorn
        - --workers
        - "2"
        - --threads
        - "4"
        - --bind
        - 0.0.0.0:8000
        - users.wsgi:application
        image: feelwork/musicians-users-service:1.0.5
        name: users-container
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

      restartPolicy: Always
