k8s/prod/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kong
  name: kong
spec:
  ports:
  - name: "8000"
    port: 80
    targetPort: 8000
  - name: "8443"
    port: 443
    targetPort: 8443
  selector:
    service: kong
  type: LoadBalancer
